# starline-omega

./: .env.example  .gitignore  LICENSE  README.md  default.project.json  pyproject.toml
.github/workflows/: ci.yml
docs/: AFK_MODE.md  ARCHITECTURE.md  ECONOMY.md  ENCODING.md  ENGINE.md  GAME_ENGINE.md  GARAGE.md  INVARIANTS.md  LOCAL_RUN.md  PERFORMANCE.md  PROGRESS.md  PUBLISH.md  RIGOR.md  RUNTIME_CONTRACT.md  SCHRODINGER_LATTICE.md  SELF_HOST.md  TEST_DRIVE.md  TRACK_COMPOSITION.md  WIRE_PACK.md
python/tests/: test_afk.py  test_economy.py  test_energy.py  test_engine.py  test_formalization.py  test_hex_lattice.py  test_packets.py  test_rigor.py  test_vehicles.py  test_wire_pack.py
roblox/: README.md
roblox/ServerScriptService/: StarlineBootstrap.server.lua  StarlineServer.server.lua
roblox/Starline/: AfkPilot.lua  AudioField.lua  ClientState.lua  Coherence.lua  CoherenceTrail.lua  Config.lua  EconomyField.lua  EconomyStore.lua  Engine.lua  Flow.lua  HexLattice.lua  InputNoise.lua  MotionConfig.lua  MotionCore.lua  MusicController.lua  Packets.lua  PhaseSync.lua  PlayerState.lua  Resonance.lua  SimClock.lua  Smoothness.lua  SplineTrack.lua  Stability.lua  StarlineEngine.lua  StateReplicator.lua  TelemetrySink.lua  TrackBuilder.lua  TrackScore.lua  TrackUnlock.lua  TrackVisual.lua  VehicleCatalog.lua  (+3 more)
scripts/: afk_report.py  coherence_loop.py  demo.py  dev.sh  engine_manifest.py  field_report.py  headless_play.py  lattice_export.py  local_run.sh  loop_seal.py  sim_report.py  sync_config_check.py  telemetry_server.py  test_drive.sh  tuning_sweep.py
(+31 files in other folders)
