[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starline"
version = "0.1.0"
description = "STARLINE Ω — Coherent Motion Engine (reference kernel)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8"]
viz = ["matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-q"
